[INTERNAL] sap.m.Dialog: Scrollbar issue
- removed odd scrollbar in IE when sap.m.Table is in Dialog
- see snippix 65856

BCP: 1670478628

--- a/src/themelib_sap_belize/src/sap/m/themes/sap_belize/Dialog.less
+++ b/src/themelib_sap_belize/src/sap/m/themes/sap_belize/Dialog.less
@@ -4,7 +4,7 @@
 /* ============================= */
 
 .sapMDialog {
-	border: none;
+	border: solid 1px transparent;
 	border-radius: 0.25rem;
 	box-shadow: @sapUiShadowLevel3;
 }
